# galdr

./: .commitlintrc.yaml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  deny.toml  justfile  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml  scorecard.yml
assets/: demo.tape
docs/: ROADMAP.md
examples/: galdr-demo-SKILL.md
scripts/: release-cut.sh
src/: bench.rs  catalog.rs  config.rs  daemon.rs  diff.rs  distill.rs  doctor.rs  engine.rs  export.rs  ext.rs  harness.rs  hook.rs  ipc.rs  judge.rs  launchd.rs  link.rs  main.rs  observe.rs  observe_mac.rs  outcome.rs  parametrize.rs  paths.rs  record.rs  regression.rs  remove.rs  setup.rs  skill.rs  span.rs  style.rs  suggest.rs  summary.rs  upgrade.rs  validate.rs
src/tui/: app.rs  data.rs  mod.rs  screens.rs  theme.rs
tests/: cli.rs
