[package]
name = "galdr"
version = "0.14.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Record & Replay for agent skills — capture a session's tool calls and distill them into a reproducible skill. Local-first."
readme = "README.md"
repository = "https://github.com/Arakiss/galdr"
authors = ["Petru Arakiss <petruarakiss@gmail.com>"]
keywords = ["agent", "skills", "record", "replay", "automation"]
categories = ["command-line-utilities", "development-tools"]

[features]
# Autonomous distillation against a local MLX server. Off by default: a plain
# `cargo build` has no HTTP client and `distill --auto` falls back cleanly to the
# Phase 0 draft. The engine only ever talks to loopback (enforced in code).
mlx = ["dep:reqwest"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
ratatui = "=0.30.2"
# Loopback-only HTTP client for the optional MLX engine. No TLS feature: the
# engine speaks plain HTTP to 127.0.0.1, so pulling a TLS backend would be pure
# surface and weight. Gated behind `mlx`.
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
], optional = true }
rusqlite = { version = "0.40.1", features = ["bundled", "backup"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.49", features = ["formatting"] }
tokio = { version = "1.52.3", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "macros",
    "signal",
    "time",
    "io-util",
    "sync",
    "fs",
] }
ulid = "1.2.1"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
# NOTE: do not set `panic = "abort"`. The sensor (`galdr hook`) relies on
# `std::panic::catch_unwind` to guarantee it always exits 0 and never breaks the
# agent session. Aborting on panic would defeat that contract.
