[package]
name = "galdr"
version = "0.17.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Record & Replay for agent skills — capture a session's tool calls and distill them into a reproducible skill. Local-first."
readme = "README.md"
repository = "https://github.com/Arakiss/galdr"
authors = ["Petru Arakiss <petruarakiss@gmail.com>"]
keywords = ["agent", "skills", "record", "replay", "automation"]
categories = ["command-line-utilities", "development-tools"]

[features]
# Autonomous distillation against a local MLX server. Off by default: a plain
# `cargo build` has no HTTP client and `distill --auto` falls back cleanly to the
# Phase 0 draft. The engine only ever talks to loopback (enforced in code).
mlx = ["dep:reqwest"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
ratatui = "=0.30.2"
# Loopback-only HTTP client for the optional MLX engine. No TLS feature: the
# engine speaks plain HTTP to 127.0.0.1, so pulling a TLS backend would be pure
# surface and weight. Gated behind `mlx`.
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
], optional = true }
rusqlite = { version = "0.40.1", features = ["bundled", "backup"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.49", features = ["formatting"] }
tokio = { version = "1.52.3", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "macros",
    "signal",
    "time",
    "io-util",
    "sync",
    "fs",
] }
tungstenite = { version = "0.29.0", default-features = false, features = [
    "handshake",
    "url",
] }
ulid = "1.2.1"

[dev-dependencies]
tempfile = "3.27.0"

# macOS-only native observation sensor (`galdr observe mac`). objc2 bindings for the
# CGEventTap (input capture) and the CoreFoundation run loop that drives it. Gated to
# the macOS target: a Linux/Windows build never pulls these, and the sensor there is a
# stub that fails with a clear message.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-application-services = { version = "0.3", default-features = false, features = [
    "std",
    "objc2",
    "libc",
    "HIServices",
    "AXUIElement",
    "AXValue",
    "AXError",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "objc2",
    "CFRunLoop",
    "CFMachPort",
    "CFBase",
    "CFString",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
    "std",
    "CGEvent",
    "CGEventTypes",
    "CGEventSource",
] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
# NOTE: do not set `panic = "abort"`. The sensor (`galdr hook`) relies on
# `std::panic::catch_unwind` to guarantee it always exits 0 and never breaks the
# agent session. Aborting on panic would defeat that contract.
